# Blumy

./: .gitignore  .gitmodules  .prettierrc  Blumy.3mf  README.md  docker-compose.dev.yml  package-lock.json  package.json  platformio.ini
.devcontainer/: Dockerfile  devcontainer.json
Blumy-Board/: Blumy-Board.kicad_pcb  Blumy-Board.kicad_pro  Blumy-Board.kicad_sch  README.md
Blumy-Board-Panel/: Blumy-Board.kicad_prl  panel.kicad_prl  panel.py
Blumy-Firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig
Blumy-Pages/: index.html  package-lock.json  package.json  vite.config.ts
Blumy-Server/: docker-compose.yml  migratedb.py  package.json
Board/: Board.kicad_pcb  Board.kicad_pro  Board.kicad_sch  README.md
ChirpFirmware/: Makefile  README.md  main.c  main.elf  main.hex  main.i  main.s  platformio.ini  usiTwiSlave.i  usiTwiSlave.s
ESPlant-Board-Panel/: fp-info-cache  (+15 more)
ESPlant-Firmware/main/: CMakeLists.txt  configuration_mode_server.c  defaults.h  idf_component.yml  main.c  plantfi.c  plantfi.h  plantstore.c  plantstore.h
ESPlant-Firmware/main/peripherals/: config.h  sensors.c  sensors.h
Firmware/main/: CMakeLists.txt  captive_plant_dns.c  captive_plant_dns.h  configuration_mode_server.c  configuration_mode_server.h  defaults.h  idf_component.yml  main.c  plantdns.c  plantdns.h  plantfi.c  plantfi.h  plantmqtt.c  plantmqtt.h  plantnow.c  plantnow.h  plantstore.c  plantstore.h  update.c  update.h
Firmware/main/certs/: generate-certs.sh  prvtkey.pem  servercert.pem
Firmware/main/peripherals/: adc.c  adc.h  config.c  config.h  sensors.c  sensors.h
(+1249 files in other folders)
